--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,6 @@ jobs:
   build:
     docker:
       - image: brettt89/silverstripe-web
-        environment:
-          - SS_DATABASE_CLASS=MySQLPDODatabase
-          - SS_DATABASE_SERVER=127.0.0.1
-          - SS_DATABASE_USERNAME=root
-          - SS_DATABASE_PASSWORD=ubuntu
-          - SS_DATABASE_NAME=circle_test
-          - SS_ENVIRONMENT_TYPE=dev
       - image: circleci/mysql:5.7
         environment:
           - MYSQL_USER=root
@@ -37,11 +30,13 @@ jobs:
             php -r "if (hash_file('SHA384', 'composer-setup.php') === '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
             php composer-setup.php
             php -r "unlink('composer-setup.php');"
+            php -r "unlink('composer.phar');"
 
       - run: composer create-project silverstripe/installer:3.1 ~/var/www -n
       - run: composer require firesphere/stripeslack:dev-master
       - run: rm phpunit.xml.dist
       - run: cp stripeslack/phpunit.xml.dist .
+      - run: cp stripeslack/.env.php ~/var/www/_ss_environment.php
       - run: framework/sake dev/build
 
       # run tests!
