--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             php -r "unlink('composer.phar');"
 
       - run: composer create-project silverstripe/installer:3.1 ~/var/www -n
+      - run: cd ~/var/www; composer install
       - run: composer require firesphere/stripeslack:dev-master
       - run: composer require phpunit/PHPUnit:3.7
       - run: rm phpunit.xml.dist
