FIX Add config name for priority, slash to auth URL and add to OAuth request payload

--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -1,3 +1,6 @@
+---
+Name: stripeslackroutes
+---
 Director:
   rules:
-    'SlackAuthorization//$Action//$ID//$OtherID': SlackAuthController
+    'SlackAuthorization': SlackAuthController
