--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -4,3 +4,4 @@ Name: stripeslackroutes
 Director:
   rules:
     'SlackAuthorization': SlackAuthController
+    'SlackStatus//$Action/$ID/$OtherID': SlackStatusController
