--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,23 +22,12 @@ jobs:
 
     working_directory: ~/var/www
 
-    branches:
-      only:
-        - master
-        - develop
-        - /feature.*/
-
     steps:
       # Install additional requirements
 
-      - run: composer create-project silverstripe/installer:~3 ~/var/www -n
-      - run: composer require firesphere/stripeslack:dev-feature/badge
-      - run: composer update -n --prefer-dist
-      - run: rm phpunit.xml.dist
-      - run: cp stripeslack/phpunit.xml.dist .
-      - run: cp stripeslack/.env.php ~/var/www/_ss_environment.php
-      - run: framework/sake dev/build
+      - run: composer create-project firesphere/stripeslack:ss4-dev -n -s dev ~/var/www
+      - run: vendor/silverstripe/framework/sake dev/build
 
       # run tests!
-      - run: vendor/bin/phpunit -d memory_limit=1G --coverage-clover=coverage.xml stripeslack/tests
+      - run: vendor/bin/phpunit -d memory_limit=1G --coverage-clover=coverage.xml tests
       - run: bash <(curl -s https://codecov.io/bash) -f coverage.xml
