--- a/codecov.yml
+++ b/codecov.yml
@@ -1,9 +1,6 @@
-fixes:
-  - "stripeslack/code::code"
 ignore: # Ignoring irrelevant code. Default SS stuff should not be called out by Codecoverage
-  - "code/actions"
-  - "code/admins"
-  - "code/extensions"
-  - "code/forms"
-  - "code/models"
-  - "framework"
+  - "src/actions"
+  - "src/admins"
+  - "src/extensions"
+  - "src/forms"
+  - "src/models"
