--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,3 +1,8 @@
+---
+Name: stripeslackconfig
+After:
+  - '#cmsextensions'
+---
 SilverStripe\SiteConfig\SiteConfig:
   extensions:
     - Firesphere\StripeSlack\Extension\SiteConfigExtension
