--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "slack",
     "invite"
   ],
-  "license": "gpl-3.0",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Simon 'Sphere' Erkelens",
