FIX: Bind to package, not recipe
The recipe is one way of installing the CMS, but not the only way. This change also fixes situations where the silverstripe/recipe-cms ^4 has been installed, rather than ^1 (the numbering of which was a bug)

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   ],
   "require": {
-    "silverstripe/recipe-cms": "^1.0",
+    "silverstripe/cms": "^4.0",
     "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
